# tg_bot_api-AI

./: .gitignore  README.md  docker-compose.yml
PostgreSQL/: Dockerfile
chat_bot/: Dockerfile  main.py  pyproject.toml  requirements.txt
chat_bot/bot/: main.py  models.py
chat_bot/bot/config/: database.py
chat_bot/bot/migrations/: env.py
chat_bot/bot/migrations/versions/: 4d2ea7da9811_create_log_table.py
env/: .env.example
scripts/: bot-entrypoint.sh
